# better-python-with-ci-cd

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: testing-issue-template.md
.github/workflows/: test-on-pr.yml
docker_python_postgres_tutorial/: README.md  compose.yml  pyproject.toml  pyvenv.cfg
docker_python_postgres_tutorial/app/: Dockerfile  ingest_data.py
docker_python_postgres_tutorial/config/: README.md
docker_python_postgres_tutorial/database/: README.md
docker_python_postgres_tutorial/tests/: test_ingest_data.py
fizz_buzz/: fizz_buzz_if.py  pyproject.toml
fizz_buzz/tests/: test_fizz_buzz.py
