[tool.poetry]
name = "fizz_buzz"
version = "0.0.3"
description = ""
authors = ["Zhenev"]
readme = "README.md"
# packages = [{include = "fizz_buzz"}] in case we want to release the project

[tool.poetry.dependencies]
python = "^3.10.5"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
